[package]
name = "nikke_overload_simulation"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
enum-assoc = "1.1.0"
hdrhistogram = "7.5.4"
itertools = "0.12.1"
more-asserts = "0.3.1"
rand = "0.8.5"
strum = "0.26.1"
strum_macros = "0.26.1"
